--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.url=jdbc:mysql://localhost:3306/dbdacsan?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=phuthinh
+spring.datasource.password=200539Huy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Tu dong tao/cap nhat bang (hibernate.hbm2ddl.auto)
@@ -23,7 +23,7 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-storage.location=D:/upload
+storage.location=upload
 #spring.main.allow-bean-definition-overriding=true
 logging.level.vn.edu.hcmute=DEBUG
 #upload
