fix all and finish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.mandatoryFileEncoding=UTF-8
 #send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=caothophuthinh@gmail.com
+spring.mail.password=haki lvhr qswj skqc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 storage.location=upload
@@ -39,4 +39,4 @@ momo.secret-key=K951B6PE1waDMi640xX08PD3vg6EkVlz
 momo.endpoint=https://test-payment.momo.vn/v2/gateway/api/create
 
 # ???ng d?n Ngrok (Thay ??i m?i khi ch?y l?i Ngrok)
-app.base-url= https://7f2493e50489.ngrok-free.app
+app.base-url= https://1f414f8df775.ngrok-free.app
